cmake_minimum_required(VERSION 3.10)

project(AllocatorAnalyzer)

set(CMAKE_CXX_STANDARD 23)
add_executable(allocator allocator.cpp)
add_executable(analyzer analyzer.cpp)
add_executable(main main.cpp)

# Add the test
enable_testing()
add_test(NAME MainTest1 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest2 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest3 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest4 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest5 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest6 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest7 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest8 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest9 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest11 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest12 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest13 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest14 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest15 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest16 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest17 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest18 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest19 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest21 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest22 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest23 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest24 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest25 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest26 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest27 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest28 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest29 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest31 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest32 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest33 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest34 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest35 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest36 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest37 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest38 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest39 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest41 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest42 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest43 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest44 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest45 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest46 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest47 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest48 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest49 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest51 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest52 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest53 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest54 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest55 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest56 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest57 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest58 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest59 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 10000" "--analyzer=$<TARGET_FILE:analyzer>")

