cmake_minimum_required(VERSION 3.10)

project(AllocatorAnalyzer)

set(CMAKE_CXX_STANDARD 23)
add_executable(allocator allocator.cpp)
add_executable(fixedsizepooledallocator fixedsizepooledallocator.cpp)
add_executable(analyzer analyzer.cpp)
add_executable(main main.cpp)

# Add the test
enable_testing()
add_test(NAME MainTest1 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest2 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest3 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest4 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest5 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest6 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest7 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest8 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest9 COMMAND main "--allocator=$<TARGET_FILE:allocator> 10 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest11 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest12 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest13 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest14 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest15 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest16 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest17 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest18 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest19 COMMAND main "--allocator=$<TARGET_FILE:allocator> 30 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest21 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest22 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest23 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest24 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest25 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest26 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest27 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest28 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest29 COMMAND main "--allocator=$<TARGET_FILE:allocator> 50 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest31 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest32 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest33 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest34 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest35 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest36 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest37 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest38 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest39 COMMAND main "--allocator=$<TARGET_FILE:allocator> 90 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest41 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest42 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest43 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest44 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest45 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest46 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest47 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest48 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest49 COMMAND main "--allocator=$<TARGET_FILE:allocator> 5 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest51 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest52 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest53 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest54 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest55 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest56 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest57 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest58 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest59 COMMAND main "--allocator=$<TARGET_FILE:allocator> 2 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest61 COMMAND main "--allocator=$<TARGET_FILE:allocator> 1 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest62 COMMAND main "--allocator=$<TARGET_FILE:allocator> 1 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest63 COMMAND main "--allocator=$<TARGET_FILE:allocator> 1 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest64 COMMAND main "--allocator=$<TARGET_FILE:allocator> 1 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest65 COMMAND main "--allocator=$<TARGET_FILE:allocator> 1 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest66 COMMAND main "--allocator=$<TARGET_FILE:allocator> 1 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest67 COMMAND main "--allocator=$<TARGET_FILE:allocator> 1 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest68 COMMAND main "--allocator=$<TARGET_FILE:allocator> 1 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME MainTest69 COMMAND main "--allocator=$<TARGET_FILE:allocator> 1 10000" "--analyzer=$<TARGET_FILE:analyzer>")


add_test(NAME FixedPooledTest1 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 10 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest2 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 10 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest3 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 10 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest4 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 10 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest5 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 10 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest6 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 10 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest7 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 10 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest8 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 10 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest9 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 10 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest11 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 30 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest12 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 30 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest13 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 30 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest14 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 30 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest15 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 30 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest16 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 30 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest17 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 30 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest18 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 30 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest19 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 30 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest21 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 50 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest22 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 50 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest23 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 50 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest24 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 50 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest25 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 50 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest26 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 50 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest27 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 50 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest28 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 50 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest29 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 50 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest31 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 90 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest32 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 90 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest33 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 90 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest34 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 90 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest35 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 90 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest36 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 90 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest37 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 90 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest38 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 90 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest39 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 90 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest41 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 5 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest42 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 5 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest43 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 5 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest44 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 5 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest45 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 5 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest46 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 5 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest47 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 5 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest48 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 5 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest49 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 5 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest51 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 2 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest52 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 2 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest53 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 2 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest54 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 2 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest55 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 2 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest56 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 2 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest57 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 2 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest58 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 2 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest59 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 2 10000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest61 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 1 2" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest62 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 1 10" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest63 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 1 20" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest64 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 1 50" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest65 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 1 100" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest66 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 1 500" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest67 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 1 1000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest68 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 1 5000" "--analyzer=$<TARGET_FILE:analyzer>")
add_test(NAME FixedPooledTest69 COMMAND main "--allocator=$<TARGET_FILE:fixedsizepooledallocator> 1 10000" "--analyzer=$<TARGET_FILE:analyzer>")
